--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,41 @@
-certifi==2017.11.5
-chardet==3.0.4
+astroid==2.1.0
+backcall==0.1.0
+cffi==1.11.5
+Click==7.0
+colorama==0.4.1
+decorator==4.3.2
 Django==1.11.7
-django-contrib-comments==1.8.0
-idna==2.6
-Markdown==2.6.11
-Pillow==5.0.0
-Pygments==2.2.0
-PyMySQL==0.8.0
-pytz==2017.3
-requests==2.18.4
-urllib3==1.22
+entrypoints==0.3
+flake8==3.7.5
+Flask==1.0.2
+gevent==1.4.0
+greenlet==0.4.15
+ipython==7.2.0
+ipython-genutils==0.2.0
+isort==4.3.4
+itsdangerous==1.1.0
+jedi==0.13.2
+Jinja2==2.10
+lazy-object-proxy==1.3.1
+Markdown==3.1
+MarkupSafe==1.1.1
+mccabe==0.6.1
+mysql-connector-python==8.0.14
+parso==0.3.3
+pickleshare==0.7.5
+Pillow==5.4.1
+prompt-toolkit==2.0.8
+pycodestyle==2.5.0
+pycparser==2.19
+pyflakes==2.1.0
+Pygments==2.3.1
+pylint==2.2.2
+PyMySQL==0.9.3
+pytz==2018.9
+six==1.12.0
+traitlets==4.3.2
+virtualenv==16.4.3
+virtualenvwrapper-win==1.2.5
+wcwidth==0.1.7
+Werkzeug==0.15.2
+wrapt==1.11.1
